demo-03/application-2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: application-2
    argocd.argoproj.io/managed-by: openshift-gitops
  name: application-2
