demo-03/application-2/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: nginx
    weight: 100
  wildcardPolicy: None
